--- a/index.html
+++ b/index.html
@@ -207,6 +207,10 @@
                             <li class="unsub-form__column"><input class="unsub-form__input" type="radio" name="unsub" id="un1" value="1" checked><span class="check"></span> <label class="unsub-form__label" for="un1">Вариант 1</label></li>
                             <li class="unsub-form__column"><input class="unsub-form__input"  type="radio" name="unsub" id="un2"  value="2"><span class="check"></span> <label class="unsub-form__label" for="un2">Вариант 2</label></li>
                             <li class="unsub-form__column"><input class="unsub-form__input"  type="radio" name="unsub" id="un3"  value="3"><span class="check"></span><label  class="unsub-form__label" for="un3">Вариант 3</label></li>
+                            <li class="unsub-form__column"><input class="unsub-form__input"  type="radio" name="unsub" id="un3"  value="3"><span class="check"></span><label  class="unsub-form__label" for="un3">Вариант 3</label></li>
+                            <li class="unsub-form__column"><input class="unsub-form__input"  type="radio" name="unsub" id="un3"  value="3"><span class="check"></span><label  class="unsub-form__label" for="un3">Вариант 3</label></li>
+                            <li class="unsub-form__column"><input class="unsub-form__input"  type="radio" name="unsub" id="un3"  value="3"><span class="check"></span><label  class="unsub-form__label" for="un3">Вариант 3</label></li>
+                            <li class="unsub-form__column"><input class="unsub-form__input"  type="radio" name="unsub" id="un3"  value="3"><span class="check"></span><label  class="unsub-form__label" for="un3">Вариант 3</label></li>
                             <li class="unsub-form__btn"><input type="submit" class="unsub-form__button button" value="Отписаться"></div>
                         </ul>
                     </form>
